--- a/index.html
+++ b/index.html
@@ -1,1 +1,67 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<title>For Abbey Jill ❤️</title>
+<style>
+    body {
+        margin: 0;
+        overflow: hidden;
+        background: linear-gradient(#ff9a9e, #fad0c4);
+        font-family: Arial, sans-serif;
+        text-align: center;
+        color: white;
+    }
 
+    h1 {
+        position: absolute;
+        top: 40%;
+        width: 100%;
+        font-size: 48px;
+        text-shadow: 2px 2px 10px red;
+    }
+
+    .heart, .flower {
+        position: absolute;
+        font-size: 24px;
+        animation: floatUp 6s linear infinite;
+    }
+
+    @keyframes floatUp {
+        from {
+            transform: translateY(100vh);
+            opacity: 1;
+        }
+        to {
+            transform: translateY(-10vh);
+            opacity: 0;
+        }
+    }
+</style>
+</head>
+<body>
+
+<h1>I LOVE YOU ABBEY JILL ❤️</h1>
+
+<audio autoplay loop>
+    <source src="https://www.bensound.com/bensound-music/bensound-romantic.mp3" type="audio/mp3">
+</audio>
+
+<script>
+function createElement(symbol, className) {
+    const el = document.createElement("div");
+    el.className = className;
+    el.innerHTML = symbol;
+    el.style.left = Math.random() * 100 + "vw";
+    el.style.animationDuration = (Math.random() * 3 + 3) + "s";
+    document.body.appendChild(el);
+
+    setTimeout(() => el.remove(), 6000);
+}
+
+setInterval(() => createElement("❤️", "heart"), 300);
+setInterval(() => createElement("🌹", "flower"), 800);
+</script>
+
+</body>
+</html>
